Closed
Bug 427711
Opened 18 years ago
Closed 17 years ago
Can't rename a local folder to exactly the same name
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9
People
(Reporter: philor, Assigned: philor)
Details
Attachments
(1 file)
|
1019 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. Right-click a local folder, select Rename
2. Without changing the name, click OK
If you're on Linux or Windows, you'll get an alert telling you that a folder with that name exists (duh); if you're on Mac, since you already have a modal sheet open, you'll get nothing until you cancel, at which point you'll get an even more senseless alert, telling you that you have to choose something different in the sheet that's already gone.
I don't even pretend to understand nsLocalMailFolder.cpp, but this seems to work, and seems reasonable enough to me.
Attachment #314282 -
Flags: superreview?(bienvenu)
Attachment #314282 -
Flags: review?(bienvenu)
| Assignee | ||
Updated•18 years ago
|
Target Milestone: --- → mozilla1.9
Version: unspecified → Trunk
Comment 1•18 years ago
|
||
Comment on attachment 314282 [details] [diff] [review]
Fix v.1
seems safe enough - I wonder if we should return an error, though, or maybe just assert. Also, ideally, the front end code wouldn't even call Rename if the name didn't change. But I don't think this can hurt anything...
Attachment #314282 -
Flags: superreview?(bienvenu)
Attachment #314282 -
Flags: superreview+
Attachment #314282 -
Flags: review?(bienvenu)
Attachment #314282 -
Flags: review+
| Assignee | ||
Comment 2•17 years ago
|
||
I thought about an error for a while, but firstly, I don't trust people not to propagate it up to the user, who should never, ever see word one about it, and secondly, I didn't manage to imagine the programmer who needs to know that he unknowingly tried to rename a folder to the same name, so I decided that when he finds out he doesn't get one, I'll let *him* decide what error he wants to get back. The front end I've got to touch anyway, so I'll see about giving it some minimal smarts.
mailnews/local/src/nsLocalMailFolder.cpp 1.575
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 3•17 years ago
|
||
Between
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9pre) Gecko/2008041001 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4)
and
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9pre) Gecko/2008041102 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4)
V.Fixed
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•