Bug 427711 - Can't rename a local folder to exactly the same name, r+sr=bienvenu